@@ -1,0 +1,23 @@
+<?php
+/**
+ * Allows a user to retrieve a forgotten password
+ *
+ * @since   r154
+ * @author  adrien
+ */
+class ForgottenPasswordForm extends sfForm
+{
+    public function configure()
+    {
+        $this->setWidgets(array(
+          'username' => new sfWidgetFormInput(),
+        ));
+
+        $this->widgetSchema->setNameFormat('password[%s]');
+
+        $this->setValidators(array(
+          'username' => new sfValidatorString(array('required' => true)),
+        ));
+    }
+}
+?>
